docs/v1.0.14/CHANGELOGS/Place-Widget.md
## v2.4.2, 31 March 2026
- Added capability to highlight Venue in Mappls Place Picker
- Added Option to show Venue Entry Coordinates and snap on Venue Entry Coordinates
- Added `searchType` parameter in Place Picker and Place Autocomplete

## v2.4.1, 01 September 2025
- Added Android 15 Support

## v2.4.0, 15 May 2025
- Changes in POI Logic in Place Picker
- Added Option to show Entry Coordinates and snap on Entry Coordinates

## v2.3.2, 17 December 2024
- Added Option to set Base url
 
## v2.3.1, 23 October 2024
- Bug Fixes

## v2.3.0, 09 May 2024
- Added capability to highlight buildings in Mappls Place Picker

## v2.2.1, 10 April 2024
- Added more paramters in `PlaceOptions` to change UI colors
- Added `lang` parameter in Place Picker

## v2.2.0, 03 January 2024
- Fixes in POI Logic in Place Picker

## v2.1.0, 02 June 2023
- Added Search Option in History Result
- Added Option to add favorite places
- Remove Toast in error of Search

## v2.0.3, 02 May, 2023
- Added `debounce` parameter
- Added `responseLang` parameter

## v2.0.2, 06 Feb, 2023
- Added Option to enable current location

## v2.0.1, 18 Oct, 2022
- Resolve status bar color issue

## v2.0.0, 21 Jun, 2022
- Initial Mappls Release